<?xml version="1.0"?><package format="3"><name>launch_lab</name><version>0.1.0</version><description>ROS2 Launch Demo</description><maintainer email="user@example.com">lixin</maintainer><license>Apache-2.0</license><buildtool_depend>ament_cmake</buildtool_depend><depend>rclcpp</depend><depend>std_msgs</depend><exec_depend>ros2launch</exec_depend><export><build_type>ament_cmake</build_type></export></package>
