<?xml version="1.0"?>
<package format="3">
  <name>multimachine_lab</name>
  <version>0.1.0</version>
  <description>ROS2 多机分布式通信实验 — DDS SPDP/SEDP 自动发现</description>
  <maintainer email="user@example.com">lixin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
